opam-version: "1.2"
name: "vmnet"
maintainer: "Anil Madhavapeddy <anil@recoil.org>"
authors: "Anil Madhavapeddy <anil@recoil.org>"
homepage: "https://github.com/mirage/ocaml-vmnet"
bug-reports: "https://github.com/mirage/ocaml-vmnet/issues"
dev-repo: "https://github.com/mirage/ocaml-vmnet.git"
license: "ISC"

build: [
  [ "jbuilder" "subst"] {pinned}
  [ "jbuilder" "build" "-p" name "-j" jobs ]
]

depends: [
  "ocamlfind" {build}
  "jbuilder"   {build & >="1.0+beta9"}
  "ppx_tools" {build}
  "ppx_sexp_conv" {build}
  "sexplib" {>= "113.24.00"}
  "ipaddr" {>="1.4.0"}
  "lwt" {>="2.4.3"}
  "cstruct" {>="1.9.0"}
]
available: [ os = "darwin" ]
